@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Aug 23, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Aug 28, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -10,9 +10,7 @@
                 <entry key="360" value="data/jbrowse2/Rat/rn6" />
                 <entry key= "70" value="data/jbrowse2/Rat/rn5" />
                 <entry key= "60" value="data/jbrowse2/Rat/rn3.4" />
-
-                <!--
-
+<!--
                 <entry key="239" value="data/jbrowse2/Mouse/mm39" />
                 <entry key= "35" value="data/jbrowse2/Mouse/mm38" />
                 <entry key= "18" value="data/jbrowse2/Mouse/mm37" />
@@ -88,7 +86,7 @@
                 <entry key="DOID:9000723" value="Female Urogenital Diseases and Pregnancy Complications"/>
                 <entry key="DOID:9001349" value="Stomatognathic Diseases"/>
                 <entry key="DOID:9001600" value="Wounds and Injuries"/>
-                <entry key="DOID:9004324" value="Congenital, Hereditary, and Neonatal Diseases and Abnormalities"/>
+                <entry key="DOID:9004324" value="Congenital-Hereditary-Neonatal Diseases and Abnormalities"/>
                 <entry key="DOID:9004384" value="Bacterial Infections and Mycoses"/>
                 <entry key="DOID:9004985" value="Animal Diseases"/>
                 <entry key="DOID:9005463" value="Occupational Diseases"/>
@@ -139,7 +137,7 @@
     </bean>
 
     <bean id="geneManager" class="edu.mcw.rgd.gff3.CreateGff4Gene">
-        <property name="outDir" value="Gene Models/RGD Gene Features"/>
+        <property name="outDir" value="Gene Models/NCBI Gene Features"/>
         <property name="processedMapKeys">
             <list>
                 <value>372</value>  <!-- rn7 -->
@@ -301,30 +299,19 @@
         <property name="ensemblGff">
             <map>
                 <entry key="373" value="ftp://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.110.gff3.gz"></entry>
-<!--
                 <entry key="40"  value="ftp://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.110.gff3.gz"></entry>
                 <entry key="240" value="ftp://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.110.gff3.gz"></entry>
                 <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.110.gff3.gz"></entry>
                 <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.110.gff3.gz"></entry>
                 <entry key="638" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.110.gff3.gz"></entry>
-                -->
-            </map>
-        </property>
-        <property name="ensemblJBrowseDataDirs">
-            <map>
-                <entry key="373" value="data/jbrowse2/Rat/rn7.2/Gene Models/Ensembl Gene Features/"></entry>
-                <!--
-                <entry key="40"  value="data_hg38"></entry>
-                <entry key="240" value="data_mm39"></entry>
-                <entry key="912" value="data_pig11_1"></entry>
-                <entry key="512" value="data_bonobo1_1"></entry>
-                <entry key="638" value="data_rosCfam1"></entry>
-                -->
             </map>
         </property>
     </bean>
 
     <bean id="variantManager" class="edu.mcw.rgd.gff3.CreateGff4Variants">
+        <property name="oldOutDirPrefix" value="data/jbrowse2/"/>
+        <property name="newOutDirPrefix" value="data/jbrowse2_variants/"/>
+
         <property name="outDir1" value="Variants/Damaging Variants"/>
         <property name="suffix1" value="_damaging.gff3.gz"/>
 
